--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,8 +29,9 @@ http {
     gzip_min_length 1000;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    proxy_buffers 8 24k;
-    proxy_buffer_size 2k;
+    proxy_buffer_size   128k;
+    proxy_buffers   4 256k;
+    proxy_busy_buffers_size   256k;
 
     include /etc/nginx/conf.d/*.conf;
 }
