--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -25,9 +25,13 @@ http {
 
     keepalive_timeout  65;
 
-    gzip  on;
-    gzip_min_length 1000;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip on;
+    gzip_comp_level 6;
+    gzip_vary on;
+    gzip_min_length  1000;
+    gzip_proxied any;
+    gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+    gzip_buffers 16 8k;
 
     proxy_buffer_size   128k;
     proxy_buffers   4 256k;
